Added images to web development

--- a/web-design-development.html
+++ b/web-design-development.html
@@ -95,7 +95,7 @@
  <!-- BLOG IMG -->
  <div class="blog-img img">
 
-    <img src="https://images.unsplash.com/photo-1492619375914-88005aa9e8fb?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1765&q=80" alt="blog-img">
+    <img src="https://images.unsplash.com/photo-1593720213428-28a5b9e94613?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1770&q=80" alt="blog-img">
 
   </div>
   <!-- BLOG IMG -->
@@ -131,7 +131,7 @@
     <br><br>
     <!-- PARAGRAPH -->
     <div class="blog-heading text-scroll">
-      Here's some of our work 👇
+      Here's what we can do 👇
     </div>
     
       <!-- PARAGRAPH -->
@@ -140,11 +140,11 @@
     <div class="blog-text-img">
 
         <div class="img-scroll">
-            <img src="images/album-thumbnail-four.jpg" alt="img" >
+            <img src="https://cdn.discordapp.com/attachments/979474409792360458/1131513779381882880/Screenshot_2023-07-20_at_11.11.41.png" alt="img" >
         </div>
 
         <div class="img-scroll">
-            <img src="images/album-thumbnail-five.jpg" alt="img" >
+            <img src="https://cdn.discordapp.com/attachments/979474409792360458/1131514048828153966/Screenshot_2023-07-20_at_11.12.45.png" alt="img" >
         </div>
     </div>
 
