--- a/work.html
+++ b/work.html
@@ -207,11 +207,11 @@
     <!-- BLOG -->
     <div class="blog fade-up">
         <div class="blog-img">
-            <img src="https://images.unsplash.com/photo-1609619385002-f40f1df9b7eb?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1770&q=80" alt="blog-img">
+            <img src="https://images.unsplash.com/photo-1593720213428-28a5b9e94613?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1770&q=80" alt="blog-img">
         </div>
         <div class="blog-text">
             <div class="blog-heading">Website Design and Development</div>
-            <div class="blog-description">How to start earning income from your optimised funnel.</div>
+            <div class="blog-description">Start earning income from your optimised funnel.</div>
             <div class="blog-info">
                 <a href="web-design-development.html"><div class="blog-type">Learn more</div></a>
                 
