Web dev part updated
- More showcasing of our work
- Added Jan to the signature

--- a/web-design-development.html
+++ b/web-design-development.html
@@ -135,18 +135,27 @@
     </div>
     
       <!-- PARAGRAPH -->
-
-
+    <div class="blog-text-img">
+      <div class="img-scroll">
+        <img src="https://cdn.discordapp.com/attachments/979474409792360458/1131514048828153966/Screenshot_2023-07-20_at_11.12.45.png" alt="img" >
+      </div>
+    </div>
+    <div class="blog-text-img">
+      <div class="img-scroll">
+        <img src="https://cdn.discordapp.com/attachments/979474409792360458/1131538844039266344/Screenshot_2023-07-20_at_12.51.18.png" alt="img" >
+      </div>
+    </div>
+    <div class="blog-text-img">
+      <div class="img-scroll">
+        <img src="https://cdn.discordapp.com/attachments/979474409792360458/1131538720059838504/Screenshot_2023-07-20_at_12.50.50.png" alt="img" >
+      </div>
+    </div>
     <div class="blog-text-img">
 
-        <div class="img-scroll">
-            <img src="https://cdn.discordapp.com/attachments/979474409792360458/1131513779381882880/Screenshot_2023-07-20_at_11.11.41.png" alt="img" >
-        </div>
-
-        <div class="img-scroll">
-            <img src="https://cdn.discordapp.com/attachments/979474409792360458/1131514048828153966/Screenshot_2023-07-20_at_11.12.45.png" alt="img" >
-        </div>
-    </div>
+      <div class="img-scroll">
+          <img src="https://cdn.discordapp.com/attachments/979474409792360458/1131513779381882880/Screenshot_2023-07-20_at_11.11.41.png" alt="img" >
+      </div>
+  </div>
 
     <div class="button-container">
       <a href="contact-one.html"><button class="glow-button">Ok, I'm interested!</button></a>
@@ -172,7 +181,7 @@
        SHARE LINKS -->
 
        <div class="signature">
-        <span class="text-scroll">Jakub, Web Development Leadㅤ</span> 
+        <span class="text-scroll">Jan and ㅤJakub, Web Development Leadㅤ</span> 
      </div>
 
 </div>
