--- a/work.html
+++ b/work.html
@@ -266,6 +266,9 @@
         <!-- SOCIAL MEDIA LINKS -->
         <div class="social-media-links-navigation">
             <ul>
+                <li class="text-scroll">Share:</li>
+                <li ><a href="https://twitter.com/SociovaAgency"  class="text-scroll hover ">TW</a></li>
+                <li ><a href="https://www.instagram.com/sociovaagency/"  class="text-scroll hover ">IG</a></li>
             </ul>
         </div>
           <!-- SOCIAL MEDIA LINKS -->
