--- a/email-services.html
+++ b/email-services.html
@@ -153,18 +153,15 @@
 
        <!-- PARAGRAPH -->
 
-       <!-- SHARE LINKS
 
        <div class="share-links para">
          <ul>
           <li class="text-scroll">Share:</li>
-          <li ><a href="#"  class="text-scroll hover ">YT</a></li>
-          <li ><a href="#"  class="text-scroll hover ">FB</a></li>
-          <li ><a href="#"  class="text-scroll hover ">IG</a></li>
+          <li ><a href="https://twitter.com/SociovaAgency"  class="text-scroll hover ">TW</a></li>
+          <li ><a href="https://www.instagram.com/sociovaagency/"  class="text-scroll hover ">IG</a></li>
       </ul>
        </div> 
 
-       SHARE LINKS -->
 
        <div class="signature">
         <span class="text-scroll">Mark, Email Services Leadㅤ</span> 
