Minor detail changes

--- a/about-one.html
+++ b/about-one.html
@@ -156,18 +156,20 @@
      We are an all-in-one business scaling agency focused on results. No matter where you are, we will get you further than you ever thought possible and faster than you could imagine.
     </div>
     <div class="about-text-content  text-scroll">
-      Stand out as a 6-8 figure business with Sociova. Our mission is clear: to use our skills to unlock the true potential of your entrepreneurship abilities.
-      <br><br>
+      Stand out as a 6-8 figure business with Sociova.
+      <br />
+      Our mission is clear: to use our skills to unlock the true potential of your entrepreneurship abilities.
+      <br /><br />
       We are an all-in-one scaling agency that provides services in areas such as social media marketing, funnel optimization, and so much more. Our team of experienced professionals will assist your company by unlocking new heights and breaking that barrier between you and your true potential.
-      <br><br>
+      <br /><br />
       As the digital economy evolves rapidly, new opportunities come and go. Taking action at the right time is crucial for a business to stay competitive. Every second that AI is evolving, many doors are closing, however many doors for opportunities of success are opening. Take action now before it’s too late. 
-      <br><br>
+      <br /><br />
       Whether you’re a one-person business or a company looking to expand, Sociova will take your brand to the next level. Are you ready to take the next step?
     </div>
     
    </div>
 </div>
-<br><br><br><br>
+<br /><br /><br /><br />
 <div class="center">
   <!-- ABOUT IMG -->
   <div class="about-img img">
@@ -181,19 +183,19 @@
     <div class="about-text-heading  text-scroll">
     You could either take the blue pill - Continue to deal with not getting enough clients and money.
     
-    <br><br>
+    <br /><br />
 
     OR 
 
-    <br><br>
+    <br /><br />
 
     Take the red pill - Take the single necessary step to entrepreneurial success.
 
-    <br><br><br><br>
+    <br /><br /><br /><br />
 
     So. Which one will it be?
 
-    <br><br><br><br>
+    <br /><br /><br /><br />
 
     <div class="button-container">
       <a href="contact-one.html" target="_blank"><button class="glow-button-red">The red pill.</button></a>
