--- a/contact-one.html
+++ b/contact-one.html
@@ -124,7 +124,7 @@
         <span id="rotated">  CLICK THE EMAIL * &nbsp;&nbsp;&nbsp;&nbsp; CLICK THE EMAIL * &nbsp;&nbsp;&nbsp;&nbsp; CLICK THE EMAIL * &nbsp;&nbsp;&nbsp;&nbsp; CLICK THE EMAIL * &nbsp;&nbsp;&nbsp;&nbsp; </span>
     </div>
     <div class="mail">
-        <a href="mailto:contact@sociova.net">contact@sociova.net</a>
+        <a href="mailto:contact@sociova.net" title="Email Us!">contact@sociova.net</a>
     </div>
 </div>
 
