Minor Detail Changes - Responsive

--- a/index.html
+++ b/index.html
@@ -46,6 +46,10 @@
             .navigation-logo {
                 margin-left: -70px;
             }
+
+            .social-media-links-navigation, .text-scroll {
+                transform: scale(0.8);
+            }
         }
 
         </style>
@@ -125,7 +129,7 @@
         </a>
         -->
     <div class="all-songs">
-        <a href="contact-one.html" title="Learn More"><i class="gg-arrow-right"></i></a>
+        <a href="contact-one.html" title="Learn More . . ."><i class="gg-arrow-right"></i></a>
     </div>
     </div>
 </div>
