Minor changes - responsive

--- a/index.html
+++ b/index.html
@@ -50,6 +50,10 @@
             .social-media-links-navigation, .text-scroll {
                 transform: scale(0.8);
             }
+
+            .singer-name {
+                line-height: 12.5px;
+            }
         }
 
         </style>
