Made the whole index card into a link

--- a/index.html
+++ b/index.html
@@ -119,6 +119,7 @@
 
 
     <!-- NEW RELEASE -->
+<a href="contact-one.html">
 <div class="new-release img text">
     <img src="images/macbook.png" alt="new-release">
 <div class="song-details">
@@ -137,6 +138,7 @@
     </div>
     </div>
 </div>
+</a>
 
     
 </div>
