--- a/web-design-development.html
+++ b/web-design-development.html
@@ -176,7 +176,7 @@
        </div> 
 
        <div class="signature">
-        <span class="text-scroll">Jan and  ㅤJakub, Web Development Leadㅤ</span> 
+        <span class="text-scroll">Jan and , Web Development Leadㅤ</span> 
      </div>
 
 </div>
