--- a/about-one.html
+++ b/about-one.html
@@ -153,7 +153,7 @@
 <div class="center">
   <div class="about-text">
     <div class="about-text-heading  text-scroll">
-     We are an all-in-one business scaling agency focused on results. No matter where you are, we will get you further than you ever thought possible and faster than you could imagine.
+     We are an all-in-one business scaling agency focused on results. No matter where you are, we will take you further than you ever thought possible and faster than you could imagine.
     </div>
     <div class="about-text-content  text-scroll">
       Stand out as a 6-8 figure business with Sociova.
