--- a/index.html
+++ b/index.html
@@ -15,6 +15,14 @@
         <link rel="stylesheet" href="css/index.css">
        
         <style>
+            body::-webkit-scrollbar {
+                display: none;
+
+            }
+            body {
+                -ms-overflow-style: none;  /* IE and Edge */
+                scrollbar-width: none;  /* Firefox */
+            }
             #new-text {
             position: fixed;
             top: 50%;
@@ -29,6 +37,31 @@
             transition: background-color 0.5s ease-in-out; /* Add a transition for the background-color property */
             font-family: "Josefin sans";
             text-align: center;
+            }
+
+            .blankContainer {
+                height: 100vh;
+                width: 100vw;
+                background-color: rgb(158, 93, 124);
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                position: relative;
+                z-index: 120;
+                background: rgb(0, 0, 0);
+            }
+
+            .blankContainerWhite {
+                height: 100vh;
+                width: 100vw;
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                position: relative;
+                z-index: 120;
+                background: rgb(255, 255, 255);
+                overflow-y: hidden;
+                overflow-x: hidden;
             }
 
         @media screen and (max-width: 768px) {
@@ -85,9 +118,6 @@
 
     <!-- NAVIGATION -->
     <div class="navigation">
-        <div class="logo hover ">
-            <a href="index.html"><img src="images/Sociova-logo.png" alt="logo" style="height: 150px; margin-top: -60px;"></a>
-        </div>
         <div class="menu-bar hover ">
             <div class="menu-bar-name text">
                 Menu
@@ -148,6 +178,29 @@
 </div>
 <div id="new-text" class="text">
     Taking your business from where it is to where you want it to be.
+</div>
+<div class="blankContainer">
+    <div class="text" style="font-family: 'Josefin sans'; font-size: 20px; text-align: center;">
+        You are on this website for a reason. <br><br>
+
+        You've worked hard to make your business as successful as possible. <br><br>
+        You've put in the hours, the sweat, the tears, and the money. <br><br>
+
+        Now you're ready to take it to the next level. <br><br>
+
+        You're ready to scale. <br><br>
+
+        And that's what our team of professionals are here to do for you. <br><br>
+
+        Ready, or still have some questions? <br><br>Schedule a call with us and one of our experts will help you work something out, completely free of charge.
+    </div>
+</div>
+<!-- Calendly inline widget begin -->
+<div class="calendly-inline-widget" data-url="https://calendly.com/sociova/30min?background_color=1a1a1a&text_color=ffffff" style="min-width:320px;height:700px;z-index: 120;"></div>
+<script type="text/javascript" src="https://assets.calendly.com/assets/external/widget.js" async></script>
+<!-- Calendly inline widget end -->
+<div class="blankContainerWhite">
+    <img src="./images/Sociova Logo New.png" alt="" style="width: 600px; height: auto;">
 </div>
 <!-- HEADER -->
 
