--- a/web-design-development.html
+++ b/web-design-development.html
@@ -176,8 +176,8 @@
        </div> 
 
        <div class="signature">
-        <span class="text-scroll">Jan, Web Development Leadㅤ</span> 
-     </div>
+        <span class="text-scroll"><span style="margin-right: 15px;">Jakub</span> and <span style="margin-left: 25px;">Jan</span>, Web <span style="margin: 0px 40px 0px 30px;">Development</span> Leadㅤ</span> 
+       </div>
 
 </div>
 
