--- a/index.html
+++ b/index.html
@@ -158,8 +158,8 @@
 
 
     <!-- NEW RELEASE -->
-<a href="contact-one.html" id="element-to-hide">
-    <div class="new-release img text">
+<a href="contact-one.html">
+    <div class="new-release img text" id="element-to-hide">
         <img src="images/macbook.png" alt="new-release">
     <div class="song-details">
         <div class="song-name">Ready to boost your business?</div>
