Increased speed and removed cursor

--- a/content-creation.html
+++ b/content-creation.html
@@ -47,14 +47,11 @@
     <main id="blog-single">
 
 
-           <!-- CUSTOM CURSOR -->
-           <div class="cursor scale"></div>
-           <div class="cursor-two scale"></div>
-           <!-- CUSTOM CURSOR -->
+           
   
           <!-- PRELOADER -->
           <div id="preloader">
-              <div class="p">Uploading content to 10x your customers.</div>
+              <div class="p">Content creation.</div>
           </div>
           <!-- PRELOADER -->
   
