--- a/email-services.html
+++ b/email-services.html
@@ -47,14 +47,11 @@
     <main id="blog-single">
 
 
-           <!-- CUSTOM CURSOR -->
-           <div class="cursor scale"></div>
-           <div class="cursor-two scale"></div>
-           <!-- CUSTOM CURSOR -->
+           
   
           <!-- PRELOADER -->
           <div id="preloader">
-              <div class="p">How do I guide the customer to take that extra step?</div>
+              <div class="p">Email services.</div>
           </div>
           <!-- PRELOADER -->
   
