--- a/funnel-creation.html
+++ b/funnel-creation.html
@@ -47,14 +47,11 @@
     <main id="blog-single">
 
 
-           <!-- CUSTOM CURSOR -->
-           <div class="cursor scale"></div>
-           <div class="cursor-two scale"></div>
-           <!-- CUSTOM CURSOR -->
+           
   
           <!-- PRELOADER -->
           <div id="preloader">
-              <div class="p">The truth about building a 6-figure+ business.</div>
+              <div class="p">Funnel creation.</div>
           </div>
           <!-- PRELOADER -->
   
