--- a/high-ticket-sales.html
+++ b/high-ticket-sales.html
@@ -47,14 +47,11 @@
     <main id="blog-single">
 
 
-           <!-- CUSTOM CURSOR -->
-           <div class="cursor scale"></div>
-           <div class="cursor-two scale"></div>
-           <!-- CUSTOM CURSOR -->
+           
   
           <!-- PRELOADER -->
           <div id="preloader">
-              <div class="p">Are you serious about making some money?</div>
+              <div class="p">High ticket sales</div>
           </div>
           <!-- PRELOADER -->
   
