--- a/work.html
+++ b/work.html
@@ -26,15 +26,12 @@
     <!-- MAIN CONTENT -->
     <main id="blog-one">
 
-        <!-- CUSTOM CURSOR -->
-        <div class="cursor scale"></div>
-        <div class="cursor-two scale"></div>
-        <!-- CUSTOM CURSOR -->
+        
 
 
         <!-- PRELOADER -->
         <div id="preloader">
-            <div class="p">These are the ways in which we can boost your company.</div>
+            <div class="p">What we offer.</div>
         </div>
         <!-- PRELOADER -->
 
