--- a/copywriting.html
+++ b/copywriting.html
@@ -23,14 +23,11 @@
     <main id="blog-single">
 
 
-           <!-- CUSTOM CURSOR -->
-           <div class="cursor scale"></div>
-           <div class="cursor-two scale"></div>
-           <!-- CUSTOM CURSOR -->
+           
   
           <!-- PRELOADER -->
           <div id="preloader">
-              <div class="p">Copywriting. The ‘secret’ to not losing the client’s attention.</div>
+              <div class="p">Copywriting.</div>
           </div>
           <!-- PRELOADER -->
   
