--- a/smm.html
+++ b/smm.html
@@ -47,14 +47,11 @@
     <main id="blog-single">
 
 
-           <!-- CUSTOM CURSOR -->
-           <div class="cursor scale"></div>
-           <div class="cursor-two scale"></div>
-           <!-- CUSTOM CURSOR -->
+           
   
           <!-- PRELOADER -->
           <div id="preloader">
-              <div class="p">Social media marketing. The simplest way to get clients in no time.</div>
+              <div class="p">Social media marketing.</div>
           </div>
           <!-- PRELOADER -->
   
