--- a/web-design-development.html
+++ b/web-design-development.html
@@ -47,14 +47,11 @@
     <main id="blog-single">
 
 
-           <!-- CUSTOM CURSOR -->
-           <div class="cursor scale"></div>
-           <div class="cursor-two scale"></div>
-           <!-- CUSTOM CURSOR -->
+           
   
           <!-- PRELOADER -->
           <div id="preloader">
-              <div class="p">Start earning income from your optimised funnel.</div>
+              <div class="p">Web design and development.</div>
           </div>
           <!-- PRELOADER -->
   
