Added clickableness to the new drop-downs

--- a/index.html
+++ b/index.html
@@ -136,13 +136,13 @@
                 border-radius: 5px;
                 z-index: 1000;
                 max-width: 20vw;
-                margin-top: 5px;
             }
 
             /* Style the text inside the info box */
             .info-box p {
                 margin: 0;
                 font-size: 17px;
+                padding-top: 5px;
                 font-family: "Josefin sans", sans-serif;
             }
 
@@ -157,6 +157,8 @@
 
             .top-navbar a {
                 font-size: 16px; /* Decrease font size for smaller screens */
+                display: block;
+                height: 150%;
             }
         }
         @media screen and (max-width: 768px) {
@@ -199,48 +201,54 @@
     <nav class="top-navbar">
         <ul>
             <li>
-                <a href="copywriting.html">Copywriting</a>
-                <div class="info-box">
-                    <p>Whether you have been experiencing low or high customer engagement, copywriting is a tried and true tool to attract more attention from clients and then monetise that attention into revenue.</p>
-                </div>
+                <a href="copywriting.html">Copywriting
+                    <div class="info-box">
+                        <p>Whether you have been experiencing low or high customer engagement, copywriting is a tried and true tool to attract more attention from clients and then monetise that attention into revenue.</p>
+                    </div>
+                </a>
             </li>
             <li>
-                <a href="smm.html">SMM</a>
-                <div class="info-box">
-                    <p>Social media marketing is the ultimate way to market in today's world. Our team will provide advanced strategies to develop your account from ground 0 to one of the most influential in your niche. Just sit down and relax, whilst we do all of the work for you.</p>
-                </div>
+                <a href="smm.html">SMM
+                    <div class="info-box">
+                        <p>Social media marketing is the ultimate way to market in today's world. Our team will provide advanced strategies to develop your account from ground 0 to one of the most influential in your niche. Just sit down and relax, whilst we do all of the work for you.</p>
+                    </div>
+                </a>
             </li>
             <li>
-                <a href="high-ticket-sales.html">High ticket sales</a>
-                <div class="info-box">
-                    <p>Not sure if you're going to convince that client? We've got you covered. Our high ticket sales team contains experts in psychology and offer creation, so you've got nothing to worry about.</p>
-                </div>
+                <a href="high-ticket-sales.html">High ticket sales
+                    <div class="info-box">
+                        <p>Not sure if you're going to convince that client? We've got you covered. Our high ticket sales team contains experts in psychology and offer creation, so you've got nothing to worry about.</p>
+                    </div>
+                </a>
             </li>
             <li>
-                <a href="funnel-creation.html">Funnel creation</a>
-                <div class="info-box">
-                    <p>The funnel is the main foundation of the business. If the funnel is not organised, then the business will collapse. Our marketing expertise will craft the 100% most-optimised funnel for specifically your business, that will get you customers flowing in in no time.</p>
-                </div>
+                <a href="funnel-creation.html">Funnel creation
+                    <div class="info-box">
+                        <p>The funnel is the main foundation of the business. If the funnel is not organised, then the business will collapse. Our marketing expertise will craft the 100% most-optimised funnel for specifically your business, that will get you customers flowing in in no time.</p>
+                    </div>
+                </a>
             </li>
             <li>
-                <a href="email-services.html">Email services</a>
-                <div class="info-box">
-                    <p>Email services from Sociova are straightforward, our team will give you a step-by-step process on how to get set up and from there we will do everything for you, from segmentation to setting up email lists, newsletters and the whole lot.</p>
-                </div>
+                <a href="email-services.html">Email services
+                    <div class="info-box">
+                        <p>Email services from Sociova are straightforward, our team will give you a step-by-step process on how to get set up and from there we will do everything for you, from segmentation to setting up email lists, newsletters and the whole lot.</p>
+                    </div>
+                </a>
             </li>
             <li>
-                <a href="content-creation.html">Content creation</a>
-                <div class="info-box">
-                    <p>Utilize the skills of professional video, effect, and photo editors to truly bring your business to the next level. At Sociova, we use up-to-date AI technology to massively enhance the quality and quantity of your videos.</p>
-                </div>
+                <a href="content-creation.html">Content creation
+                    <div class="info-box">
+                        <p>Utilize the skills of professional video, effect, and photo editors to truly bring your business to the next level. At Sociova, we use up-to-date AI technology to massively enhance the quality and quantity of your videos.</p>
+                    </div>
+                </a>
             </li>
             <li>
-                <a href="web-design-development.html">Web development</a>
-                <div class="info-box">
-                    <p>Have you been experiencing inactivity from specifically your funnels? Do you want to build rapport between you and your customers? Do you want something that is cost-effective, but could be used 24/7 for a worldwide audience? A website is the ultimate solution to that problem.</p>
-                </div>
-            </li>
-            
+                <a href="web-design-development.html">Web development
+                    <div class="info-box">
+                        <p>Have you been experiencing inactivity from specifically your funnels? Do you want to build rapport between you and your customers? Do you want something that is cost-effective, but could be used 24/7 for a worldwide audience? A website is the ultimate solution to that problem.</p>
+                    </div>
+                </a>
+            </li>                
         </ul>
     </nav>
     <!-- MAIN CONTENT -->
