--- a/index.html
+++ b/index.html
@@ -144,6 +144,7 @@
                 font-size: 17px;
                 padding-top: 5px;
                 font-family: "Josefin sans", sans-serif;
+                text-transform: none;
             }
 
         @media screen and (max-width: 768px) {
