--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
             }
 
             .top-navbar {
-                background-color: #000000; /* Change this to your desired background color */
+                background-color: #050505; /* Change this to your desired background color */
                 display: flex;
                 justify-content: center;
                 padding: 10px 0;
@@ -166,7 +166,7 @@
             #new-text {
                 font-size: 30px;
                 width: 70vw;
-                bottom: 1px;
+                margin-top: 10px;
             }
 
             .logo {
@@ -186,8 +186,8 @@
                 line-height: 12.5px;
             }
             .top-navbar li {
-                padding: 0 0px;
-                margin-bottom: 2px;
+                padding: 0px;
+                margin-bottom: 5px;
                 align-items: center;
             }
 
@@ -270,7 +270,7 @@
 
     <!-- NAVIGATION -->
     <div class="navigation">
-        <div class="menu-bar hover ">
+        <div class="menu-bar hover" style="margin-top: 25px;">
             <div class="menu-bar-name text">
                 Menu
             </div>
@@ -331,7 +331,7 @@
 <div id="new-text" class="text">
     Taking your business from where it is to where you want it to be.
 </div>
-<div class="blankContainer">
+<div class="blankContainer" style="padding: 0px 10px 0px 10px; line-height: 25px;">
     <div class="text" style="font-family: 'Josefin sans'; font-size: 20px; text-align: center;">
         You are on this website for a reason. <br><br>
 
@@ -358,7 +358,7 @@
 
     <div class="navigation-content">
         <div class="navigation-logo hover opacity">
-            <a href="index.html"> <img src="images/Sociova-logo.png" alt="logo" style="height: 150px; margin-top: -25px; margin-left: 60px;"> </a>
+            <a href="index.html"> <img src="images/Sociova-logo.png" alt="logo" style="height: 150px; margin-left: 60px;"> </a>
          </div>
         <ul class="navigation-ul">
             <li><a href="index.html" data-text="Home" data-img="https://cdn.discordapp.com/attachments/979474409792360458/1129866868610576424/Screenshot_2023-07-15_at_22.07.28.png">Home</a></li>
@@ -366,7 +366,7 @@
             <li><a href="work.html" data-text="Work" data-img="https://cdn.discordapp.com/attachments/979474409792360458/1129831613203751032/Screenshot_2023-07-15_at_19.47.23.png">Work</a></li>
             <li><a href="contact-one.html"  data-text="Contact" data-img="https://cdn.discordapp.com/attachments/979474409792360458/1129831680438439976/Screenshot_2023-07-15_at_19.47.40.png">Contact</a></li>
         </ul>
-        <div class="navigation-close hover about-close opacity">
+        <div class="navigation-close hover about-close opacity" style="margin-top: 25px;">
             <div class="navigation-close-line"></div>
             <div class="navigation-close-line"></div>
           </div>
